[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/UI/SpellSelection/Asset_Frame.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/font_62.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/UI/CharacterSelection/WizardPanelSelection.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/CharacterSelection/Asset_Joystick.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/CharacterSelection/Asset_Keyboard.png" type="Texture" id=5]
[ext_resource path="res://Assets/Fonts/font_40.tres" type="DynamicFont" id=6]
[ext_resource path="res://Assets/UI/CharacterSelection/Asset_ZakFace.png" type="Texture" id=7]
[ext_resource path="res://Objects/UI/CharacterSelection/SelectCharacterPanel.gd" type="Script" id=8]

[sub_resource type="Animation" id=1]
resource_name = "OnAccept"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 0.125, 9.51364, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.3, 1.3 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.2, 0.25, 0.3, 0.35, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -2.5, 2.5, -2.5, 2.5, -2.5, 0.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_wizard_selected"
} ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="SelectCharacterPanel" type="Control"]
margin_right = 500.0
margin_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 250, 175 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 500.0
margin_bottom = 350.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Highlight" type="TextureRect" parent="."]
margin_right = 495.0
margin_bottom = 348.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerId" type="Label" parent="."]
margin_left = 45.0
margin_top = 31.0
margin_right = 85.0
margin_bottom = 69.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 6 )
text = "P1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaitingForPlayerPanel" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressStartText" type="Label" parent="WaitingForPlayerPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 128.0
margin_top = 94.5
margin_right = 332.0
margin_bottom = 215.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "PRESS
SELECT"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GamepadIcon" type="TextureRect" parent="WaitingForPlayerPanel"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 148.0
margin_top = 263.0
margin_right = 210.0
margin_bottom = 305.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeyboardIcon" type="TextureRect" parent="WaitingForPlayerPanel"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 288.0
margin_top = 263.0
margin_right = 350.0
margin_bottom = 305.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectCharacterPanel" type="Control" parent="."]
visible = false
margin_right = 500.0
margin_bottom = 350.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="TextureRect" parent="SelectCharacterPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -73.5
margin_top = -94.0
margin_right = 73.5
margin_bottom = 56.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="SelectCharacterPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = 72.0
margin_right = 56.0
margin_bottom = 131.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "ZAK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputType" type="TextureRect" parent="SelectCharacterPanel"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 392.0
margin_top = 40.0
margin_right = 454.0
margin_bottom = 82.0
texture = ExtResource( 4 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/OnAccept = SubResource( 1 )
anims/RESET = SubResource( 2 )
